Add modal, photos, home content, project content

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,10 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="">
+	<body data-sveltekit-preload-data="hover" class='w-full flex flex-col items-center justify-center bg-primaryBg'>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+
+<!-- create a "theme switcher" button at the top but instead of themes it can switch frameworks -->
